--- a/LibraryTests/LibraryLogicTests.csproj
+++ b/LibraryTests/LibraryLogicTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Library\Library.csproj" />
+    <ProjectReference Include="..\Library\LibraryLogic.csproj" />
   </ItemGroup>
 
   <ItemGroup>
