gui for 2 otrher classes

--- a/PresentationLayer/PresentationLayer.csproj
+++ b/PresentationLayer/PresentationLayer.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\Library\LibraryService.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="View\CustomersView.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+
 </Project>
