--- a/PresentationLayer/PresentationLayer.csproj
+++ b/PresentationLayer/PresentationLayer.csproj
@@ -17,5 +17,9 @@
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
-
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+			<_Parameter1>PresentationLayerTest</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 </Project>
